--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "format": "prettier --write .",
     "lint": "eslint packages/*/{src,types}/**",
     "test": "run-s test-serve test-build",
-    "test-serve": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test-serve": "jest",
     "debug-serve": "cross-env VITE_DEBUG_SERVE=1 node --inspect-brk ./node_modules/.bin/jest",
-    "test-build": "cross-env NODE_OPTIONS=--experimental-vm-modules VITE_TEST_BUILD=1 jest",
+    "test-build": "cross-env VITE_TEST_BUILD=1 jest",
     "debug-build": "cross-env VITE_TEST_BUILD=1 VITE_PRESERVE_BUILD_ARTIFACTS=1 node --inspect-brk ./node_modules/.bin/jest",
     "docs": "vitepress dev docs",
     "build-docs": "vitepress build docs",
